# airspace_control

./: .gitignore  CMakeLists.txt  README.md  comandos.txt  package.xml  setup.py
graph/: gerar_grafo.py  processar_mapa.py  selecionar_cluster.py
graph/sistema_logistico/: grafo.txt  grafo_recortado.txt
launch/: airspace_all.launch  airspace_bringup.launch  airspace_stage.launch  uav_system.launch
scripts/: control_panel.py  create_map_and_launch_stage.sh  gen_stage_world.py  main.py  multi_vant_manager.py  test_vant_ros.py  uav_agent.py  v2_create_map_and_launch_stage.sh
shell/: reset_ros_env.sh
src/airspace_core/: UTM.py  controlador_vant.py  des_testbench.py  extract_automaton_matrices.py  milp_des.py  uav_agent.py  utm_testbench.py
src/ultrades_lib/core/: AutomatonNode.py  utils.py
srv/: GetBattery.srv  GotoXY.srv
worlds/: dimensoes_reais.txt
